[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbclient"
version = "0.0.4"
authors = [
  { name="chronosirius", email="chronosirius@proton.me" },
]
description = "A nosql db client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chronosirius/nosql-db-client"
"Bug Tracker" = "https://github.com/chronosirius/nosql-db-client/issues"
